--- a/AulaX1/AulaX1/MainPage.xaml
+++ b/AulaX1/AulaX1/MainPage.xaml
@@ -6,11 +6,14 @@
              mc:Ignorable="d"
              x:Class="AulaX1.MainPage">
 
-    <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
+    <StackLayout BackgroundColor="#FFBF00" Padding="30" Spacing="30">
+        <Image Source="logo.png" x:Name="logo"/>
+        <Entry Placeholder="Digite o CEP" PlaceholderColor="#FFBF00" BackgroundColor="#FFFFFF" x:Name="tbCEP" MaxLength="8"/>
+        <Button Text="BUSCAR CEP" TextColor="#FFFFFF" BackgroundColor="#00416B" x:Name="btnSearch"/>
+       
+        <Label Text="" 
            HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+           VerticalOptions="CenterAndExpand" x:Name="lblResult"/>
     </StackLayout>
 
 </ContentPage>
